--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <title>Static Site Boilerplate</title>
-    <meta name="description" content="" />
+    <meta name="description"
+          content="" />
 </head>
-<body>
 
+<body>
+    Hallo von Mathias!
 </body>
+
 </html>
