--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-    Hallo von Mathias!
+    <h1>Everything is fine!</h1>
+    </h1> <img src="./images/image.jpg" alt="image">
 </body>
 
 </html>
