--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,14 @@
 
 <body>
     <h1>Everything is fine!</h1>
-    </h1> <img src="./images/image.jpg" alt="image">
+    <picture>
+        <source srcset="./images/image.webp"
+                type="image/webp">
+        <source srcset="./images/image.jpg"
+                type="image/jpeg">
+        <img src="./images/image.jpg"
+             alt="This is my face">
+    </picture>
 </body>
 
 </html>
